--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,28 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Water</title>
-  <base href="/">
+  <title>Drink Up</title>
+  <base href="./">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link type="text/css" href="assets/css/toaster.css" rel="stylesheet" />
   <link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <script src="assets/js/jquery-1.12.4.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <% if (htmlWebpackPlugin.options.metadata.isDevServer == false) { %>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="assets/js/cordova.js"></script>
+    <% } %>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div style="padding: 40px; text-align: center">
+      <h3 style="display: block; text-align: center">Drink Up</h3>
+      <img src="assets/images/logo.jpg" height="256" width="256" style="margin: auto; width:256px; height: 256px;"  >
+    </div>
+  </app-root>
 </body>
 </html>
